[package]
name = "ssh-agent-mux"
version = "0.1.0"
edition = "2021"
authors = ["Rob Donnelly"]
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
service-binding = "3.0.0"
ssh-agent-lib = "0.5.1"
ssh-key = "0.6.7"
tokio = { version = "1.41.0", features = ["net", "rt", "time", "macros", "rt-multi-thread", "sync"] }
